clusters/cl01tl/manifests/sonarr-4k/HTTPRoute-http-route-sonarr-4k.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-sonarr-4k
  namespace: sonarr-4k
  labels:
    app.kubernetes.io/name: http-route-sonarr-4k
    app.kubernetes.io/instance: sonarr-4k
    app.kubernetes.io/part-of: sonarr-4k
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - sonarr-4k.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: sonarr-4k
          port: 80
          weight: 100
